2004-08-07  Andrew Cagney  <cagney@gnu.org>

	* doublest.c (floatformat_from_length): Fix tipo, "*" not "&".

	* doublest.c: Update copyright.
	(floatformat_from_length): Call error when floatformat is NULL.
	(extract_floating_by_length): Remove NULL fmt check.
	(store_floating_by_length): Ditto.

2004-07-29  Andrew Cagney  <cagney@gnu.org>

	* version.in: Bump to version 6.2.

2004-07-29  Andrew Cagney  <cagney@gnu.org>

	* PROBLEMS (mips-irix): Note that it is broken.

2004-07-28  Andrew Cagney  <cagney@gnu.org>

	* version.in: Bump to version 6.1.92.

2004-07-28  Andrew Cagney  <cagney@gnu.org>

	* PROBLEMS: Mention threads/1650.
	* NEWS: Mention the NPTL fix.

2004-07-26  Andrew Cagney  <cagney@gnu.org>

	* gdb-mi.el: Move from here ...
	* mi/gdb-mi.el: ... to here.

2004-07-26  Andrew Cagney  <cagney@gnu.org>

	* MAINTAINERS: Mark the xstormy16, sh64, ns32k, mn10300, mcore,
	and h8300 as broken.
	* NEWS: END-OF-LIFE frame compatibility module.
	* PROBLEMS: For "Stack backtraces", remove powerpc, hppa and mips
	specific comments.

2004-07-21  Andrew Cagney  <cagney@gnu.org>

	* PROBLEMS: Mention breakpoints/1702.
	* NEWS: For signal trampolines, cite s390 GNU/Linux as a system
	that is known to work.

2004-07-18  Andrew Cagney  <cagney@gnu.org>

	* version.in: Bump to version 6.1.91.

2004-07-17  Andrew Cagney  <cagney@gnu.org>

	* README: Update to 6.2.

	* utils.c (xvasprintf): Call xstrvprintf.

	* parse.c: Update copyright.
	(null_post_parser): Eliminate ARGSUSED.

	* ppc-linux-nat.c (store_spe_registers): Eliminate K&R C.
	* tui/tui-win.c (tui_get_cmd_list): Ditto.
	* symfile-mem.c (_initialize_symfile_mem): Ditto.

	* ppc-linux-tdep.c (ppc_linux_init_abi): Add [sic] to Linux.
	* ppc-linux-nat.c: Use "Linux kernel".
	* hppa-linux-tdep.c: Use GNU/Linux.
	* hppa-linux-nat.c: Use GNU/Linux.
	* dwarfread.c: Add [sic] to use of Linux.

	* hppa-linux-nat.c: Do not include <string.h>.
	(supply_fpregset): Remove "register" attribute.
