@@ -1,3 +1,8 @@
+2004-08-08  Mark Kettenis  <kettenis@gnu.org>
+
+	* vax-tdep.c (vax_frame_this_id): Use frame_func_unwind instead of
+	frame_pc_unwind.
+
 2004-08-07  Andrew Cagney  <cagney@gnu.org>
 
 	* doublest.c (floatformat_from_length): Fix tipo, "*" not "&".
